<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/ic_timetable"
            android:title="@string/menu_timetable" />
        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/ic_homework"
            android:title="@string/menu_diary" />
        <item
            android:id="@+id/nav_journal"
            android:icon="@drawable/ic_diary"
            android:title="@string/menu_journal" />
        <item
            android:id="@+id/nav_statement"
            android:icon="@drawable/ic_statement"
            android:title="@string/menu_statement" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>