<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragments.SapperFragment">

    <HorizontalScrollView
        android:id="@+id/state_sv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/settings_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_settings" />

            <TextView
                android:id="@+id/flag_stats_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp" />

            <TextView
                android:id="@+id/cell_left_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp" />

            <Button
                android:id="@+id/restart_head_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restart" />
        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/restart_btn"
        app:layout_constraintTop_toBottomOf="@+id/state_sv">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/field_lt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </ScrollView>
    </HorizontalScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_lt"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="horizontal"
        android:paddingVertical="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/settings_data_lt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <EditText
                android:id="@+id/sx_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/size_x"
                android:inputType="number" />

            <EditText
                android:id="@+id/sy_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/size_y"
                android:inputType="number" />

            <EditText
                android:id="@+id/mines_et"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint="@string/mines_count"
                android:inputType="number" />

            <Button
                android:id="@+id/restart_settings_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restart" />

        </LinearLayout>

        <ImageView
            android:id="@+id/roll_up"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_roll_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings_data_lt"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/restart_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>